--- a/video-processing-service/package.json
+++ b/video-processing-service/package.json
@@ -12,7 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "fluent-ffmpeg": "^2.1.3"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
